# agnathia-project

./: Final Code paperfetcherpaperfetcher.txt  README.md
get_papers_projects/: README.md  cli.py  pyproject.toml
get_papers_projects/paper_fetcher/: __init__.py  paper_fetcher.py
